[gd_scene format=3 uid="uid://ojqbp2ai7kpp"]

[ext_resource type="PackedScene" uid="uid://ugret1efjjyf" path="res://scenes/board.tscn" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://boq56jxchnc08" path="res://scenes/main.gd" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://cabl7b45od5nm" path="res://scenes/ui_panel.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://825pfyiii36f" path="res://scenes/round_manager.tscn" id="3_tbgi4"]
[ext_resource type="PackedScene" uid="uid://biom8ofaqpodx" path="res://scenes/hand_ui.tscn" id="6_tefeu"]

[node name="Main" type="Node2D" unique_id=638754456]
script = ExtResource("1_jyhfs")

[node name="BoardRoot" parent="." unique_id=1859345595 instance=ExtResource("1_0wfyh")]
position = Vector2(584, 320)

[node name="RoundManager" parent="." unique_id=1450146959 instance=ExtResource("3_tbgi4")]

[node name="UI" type="CanvasLayer" parent="." unique_id=1085845993]

[node name="UI_panel" parent="UI" unique_id=941911335 instance=ExtResource("2_0wfyh")]
offset_left = 8.0
offset_top = 122.5
offset_right = -994.6666
offset_bottom = -317.8333
scale = Vector2(1.5, 1.5)

[node name="WhiteHand" parent="UI" unique_id=1350436979 instance=ExtResource("6_tefeu")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 968.0
offset_top = 464.0
offset_right = 1132.0
offset_bottom = 631.0
grow_horizontal = 1
grow_vertical = 1

[node name="BlackHand" parent="UI" unique_id=514208533 instance=ExtResource("6_tefeu")]
offset_left = 984.0
offset_top = 9.0
offset_right = -4.0
offset_bottom = -459.0
